--- a/templates/index.html
+++ b/templates/index.html
@@ -5,141 +5,25 @@
 {% endblock %}
 
 {% block main %}
-    <form id="crossword" class="grid" action="/" method="post">
-            <table>
-                {% for row in range(dimensions[0][0]) %}
-                <tr>
-                    {% for col in range(dimensions[0][1]) %}
-                    <td>
-                        <div class="clue_number">
-                            <span class="cell_clue"></span>
-                        </div>
-                        <div class="content">
-                            <input onkeydown="return /[a-z]/i.test(event.key)" type="text" class="custom" maxlength="1" name="cell_{{ row }}_{{ col }}" id="cell_{{ row }}_{{ col }}">
-                        </div>
-                    </td>
-                    {% endfor %}
-                </tr>
-                {% endfor %}
-            </table>
-            <div>
-                <button type="submit">Check</button>
+    <div class="d-flex align-items-center justify-content-center">
+        <div class="card text-center">
+            <div class="card-body">
+                <p>
+                Upon clicking the link below, you have one attempt to submit the correct answer for today's crossword.
+                </p>
+                <p>
+                    <b>IMPORTANT:</b> If you submit an incorrect answer, your attempt will be logged and no further
+                    attempts will be registered into the leaderboard for today's puzzle, including solves.
+                </p>
+    {% if session["user_id"] %}
+                <a class="btn btn-primary btn-lg btn-block" href="/game">Begin</a>
             </div>
-        </form>    
-
-    <div class="clues">
-        <table>
-            <tr>
-                <th>Across</th>
-            </tr>
-            <tr>
-            {% for clue in clues_across %}
-            <tr>
-                <td>{{ clue[1] }}: {{ clue[2] }}</td>
-            </tr> 
-            {% endfor %}
-            </tr>
-        </table>
-        <table>
-            <tr>
-                <th>Down</th>
-            </tr>
-            <tr>
-                {% for clue in clues_down %}
-                <tr>
-                    <td>{{ clue[1] }}: {{ clue[2] }}</td>
-                </tr>
-                {% endfor %}
-            </tr>
-        </table>
+        </div>
     </div>
-    <script>
-        /* populate black cells based on solution */
-        const string = '{{ solution }}';
-        const cells = document.querySelectorAll('#crossword input');
-
-        cells.forEach((cell, index) => {
-            const expectedChar = string[index];
-            const userChar = cell.value.toUpperCase();
-
-            if (expectedChar === '.') {
-            cell.value = '.'
-            cell.readOnly = true;
-            cell.style.color = 'black';
-            cell.style.backgroundColor = 'black';
-            }
-        });
-
-        /* number clues */
-        const width = '{{ dimensions[0][1] }}';
-        
-
-        /* autofocus */
-        cells[0].focus();
-
-        cells.forEach((cell, i) => {
-            cell.addEventListener('input', (e) => {
-                if (e.target.value && i < cells.length - 1) {
-                    cells[i + 1].focus();
-                }
-            });
-
-            cell.addEventListener('keydown', (e) => {
-                if (e.key === 'Backspace' && !e.target.value && i > 0) {
-                    cells[i - 1].focus();
-                }
-                else if (e.key == 'Backspace' && e.target.value) {
-                    e.target.value = '';
-                    cells[i].focus();
-                }
-            })
-
-        });
-            
-        var start = document.getElementById('cell_0_0');
-        start.focus();
-    </script>
-    <script>
-        /* clue numbering script created by ChatGPT */
-        document.addEventListener('DOMContentLoaded', () => {
-            const solution = '{{ solution }}'; 
-            const width = parseInt('{{ dimensions[0][1] }}');
-            const height = parseInt('{{ dimensions[0][0] }}');
-
-            const cells = document.querySelectorAll('#crossword input');
-            const clueSpans = document.querySelectorAll('.cell_clue');
-
-            // Convert 1D solution string to 2D array for easier processing
-            const grid = [];
-            for (let r = 0; r < height; r++) {
-                const row = [];
-                for (let c = 0; c < width; c++) {
-                    row.push(solution[r * width + c]);
-                }
-                grid.push(row);
-            }
-
-            let clueNumber = 1;
-
-            for (let r = 0; r < height; r++) {
-                for (let c = 0; c < width; c++) {
-                    const currentChar = grid[r][c];
-                    if (currentChar === '.') continue;
-
-                    const isStartOfAcross = (c === 0 || grid[r][c - 1] === '.') && (c + 1 < width && grid[r][c + 1] !== '.');
-                    const isStartOfDown = (r === 0 || grid[r - 1][c] === '.') && (r + 1 < height && grid[r + 1][c] !== '.');
-
-                    if (isStartOfAcross || isStartOfDown) {
-                        const index = r * width + c;
-                        const clueSpan = clueSpans[index];
-                        if (clueSpan) {
-                            clueSpan.innerText = clueNumber;
-                        }
-                        clueNumber++;
-                    }
-                }
-            }
-        });
-    </script>
-    
+    {% else %}
+                <a class="btn btn-primary btn-lg btn-block disabled">Login Required</a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 {% endblock %}
