--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,11 +6,43 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>McKrossword  - {% block title %}{% endblock %}</title>
         <link href="/static/styles.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link href="/static/styles_desktop.css" rel="stylesheet">
+        <link href="/static/styles_mobile.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     </head>
 
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/">
+                <img src="/static/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                McKrossword
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                {% if session["user_id"] %}
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Log Out</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/leaderboard">Leaderboard</a>
+                    </li>
+                </ul>
+                {% else %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Log In</a>
+                    </li>
+                </ul>
+                {% endif %}
+            </div>
+        </nav>
         {% block main %}{% endblock %}
     </body> 
 
